@@ -13,7 +13,7 @@ func TestConnTimeout(t *testing.T) {
 	var d Dispatch
 	// instantiate an asocket
 	c := Config{Sockname: "/tmp/test07.sock", Timeout: 25, Msglvl: All}
-	as, err := NewUnix(c, d)
+	as, err := NewUnix(c, d, 700)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
 	}
