@@ -18,7 +18,7 @@ func TestInternalError(t *testing.T) {
 	d["badecho"] = &DispatchFunc{badecho, "split"} // and a faulty function too
 	// instantiate an asocket
 	c := Config{Sockname: "/tmp/test08.sock", Msglvl: All}
-	as, err := NewUnix(c, d)
+	as, err := NewUnix(c, d, 700)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
 	}
