@@ -18,7 +18,7 @@ func TestEchoNosplit(t *testing.T) {
 	d["echo"] = &DispatchFunc{echo, "split"}
 	// instantiate an asocket
 	c := Config{Sockname: "/tmp/test12.sock", Msglvl: Conn}
-	as, err := NewUnix(c, d)
+	as, err := NewUnix(c, d, 700)
 	if err != nil {
 		t.Errorf("Couldn't create socket: %v", err)
 	}
